{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 14,
  "lineage": "410d7287-82b9-2eb0-7fd1-e2445dd29e6b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:581349712378:security-group/sg-06b48cdee74ef5bb8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06b48cdee74ef5bb8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "my-rds-sg",
            "name_prefix": "",
            "owner_id": "581349712378",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dfff3b2275b9da80"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mysql_inbound_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-2189880389",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06b48cdee74ef5bb8",
            "security_group_rule_id": "sgr-0b05d1f5358c4810d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds-sg"
          ]
        }
      ]
    }
  ]
}